<feat> Add auth jwt and basic strategy
